--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="go88.mobi" />
 <title>Go88.mobi - So sánh cổng game Go88 vs Rikvip</title>
 <meta name="description" content="Trong số các cổng game đổi thưởng online hiện tại, thì các cổng game Go88 và Rikvip là thu hút đông đảo người chơi hơn cả. Tuy vậy, không mấy người chơi nắm rõ những điểm giống và khác nhau giữa các cổng game này">
-<link rel="canonical" href="##################################################" />
+<link rel="canonical" href="https://go88mobi.netlify.app/" />
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script> 																																																																																																																																																																																																																										<link rel="stylesheet" type="text/css" href="https://css-al.s3.jp-tok.cloud-object-storage.appdomain.cloud/style5.css">
